--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+#root {
+  --header-title: "25px";
+  overflow-x: hidden;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +40,26 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+/*custom scrollbar*/
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
